--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>day11 HomeWork</title>
+    <title>DOM Key Manipulation</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./styles.css">
   </head>
